--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["next/core-web-vitals", "prettier"],
+	"rules": {
+		"no-console": "warn",
+		"no-unused-vars": "error",
+		"semi": ["error", "never"],
+		"eol-last": "error"
+	}
 }
