--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "wheel",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+	"name": "wheel",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "pnpm prettier . --write && next lint"
+	},
+	"dependencies": {
+		"@mantine/core": "^7.10.2",
+		"@tabler/icons-react": "^3.6.0",
+		"@tanstack/react-query": "^5.45.1",
+		"next": "14.2.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"eslint-config-prettier": "^9.1.0",
+		"postcss": "^8.4.38",
+		"postcss-preset-mantine": "^1.15.0",
+		"postcss-simple-vars": "^7.0.1",
+		"prettier": "^3.3.2",
+		"typescript": "^5"
+	}
 }
