--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@mantine/core": "^7.10.2",
 		"@tabler/icons-react": "^3.6.0",
 		"@tanstack/react-query": "^5.45.1",
+		"firebase": "^10.12.2",
 		"next": "14.2.4",
 		"react": "^18",
 		"react-dom": "^18",
