--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"next": "14.2.4",
 		"react": "^18",
 		"react-dom": "^18",
+		"uuid": "^10.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
